2006-05-29  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/udp.c: roughing in zero-copy architecture

2006-05-28  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/streams/stream.h:

	  - added b_csum to mblk_t 
	  - defined MSGCSUM and MSGCRC32C flags 
	  - defined SO_WRPAD, SO_NOCSUM, SO_CSUM, SO_CRC32C flags for M_SETOPTS.

	* include/sys/streams/strsubr.h:

	  - added sd_wrpad member to stream head just after sd_wroff.
	  - defined STRCSUM_BIT, STRCSUM, STRCRC32C_BIT, STRCRC32 flags for
	    stream head.

	* src/kernel/strprocfs.c:
	  
	  - added sd_wrpad member to stream head structure

	* src/modules/sth.c:

	  - added strdsize() function to pad as well as offset writes
	  - added new so_wrpad, SO_WRPAD, SO_NOCSUM, SO_CSUM, SO_CRC32C
	    handling.

	* src/util/sysconfig/streams.conf:

	  - changed streams.strthresh from 1Meg to 16Meg.

2006-05-25  Brian Bidulock  <bidulock@openss7.org>

	- More on the compiler saga: it seems that compilers past 3.1 inline
	  everything that they can.  We don't want this where an unlikely
	  function is called from a hot one.  Therefore, I have had to go
	  through the code an add 'noinline' to all such functions to get
	  the compiler to place them in their own section and simply call the
	  from the hot section.  Also, it looks like recent GNU loaders are
	  recognizing .text.unlikely and maybe even .text.hot, so I had to
	  change the section names to .streams.hot, etc.

	* include/sys/streams/strdebug.h: changed section names, added noinline
	* scripts/hot.lds: changes section names
	* src/kernel/strsched.c: worked noinline code
	* src/kernel/strutil.c: worked noinline code
	* src/modules/pipemod.c: added an unlikely
	* src/modules/sth.c: worked noinline code

2006-05-24  Brian Bidulock  <bidulock@openss7.org>

	- A problem was discovered in optimization with recent gcc compilers,
	  such a 4.0.2, that perform -finline-functions-called-once at -O2